Insufficient accurate antecedent support propagates

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -1025,8 +1025,9 @@ and let~$p_k$ be an antecedent in~$\Prefix$.
 If~$p_k$ in the context of~$\Prefix$ has
 insufficient support (Theorem~\ref{thm:min-capture}),
 insufficient accurate support (Theorem~\ref{thm:min-capture-correct}),
-or support too similar to the set of data not captured by
-preceding antecedents (Theorem~\ref{thm:ub-support}),
+or excessive support (Theorem~\ref{thm:ub-support}),
+%or support too similar to the set of data not captured by
+%preceding antecedents (Theorem~\ref{thm:ub-support}),
 let us say that prefix~$\Prefix$ rejects antecedent~$p_K$.
 %
 Next, in Theorem~\ref{thm:reject}, we describe large classes of
@@ -1047,31 +1048,36 @@ the set of all antecedents in~$\Prefix'$, \ie
 \label{eq:start-contains}
 \end{align}
 %
-Let ${\Prefix = (p_1, \dots, p_{K-1}, p_{K})}$ be a prefix
-that rejects its last antecedent~$p_{K}$,
+Let ${\RL = (\Prefix, \Labels, \Default, K)}$ be a rule list
+with prefix ${\Prefix = (p_1, \dots, p_{K-1}, p_{K})}$,
+such that~$\Prefix$ rejects its last antecedent~$p_{K}$,
 either because~$p_{K}$ in the context of~$\Prefix$ has
 insufficient support, insufficient accurate support,
 or is too similar to the default rule.
 %
-Let ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$,
-and let ${\RLB = (\PrefixB, \LabelsB, \DefaultB, K')}$
+Let ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$ be the
+first~${K - 1}$ antecedents of~$\Prefix$.
+%
+Let ${\RLB = (\PrefixB, \LabelsB, \DefaultB, K')}$
 be any rule list with prefix
 ${\PrefixB = (P_1, \dots, P_{K'-1}, P_{K'})}$
 such that~$\PrefixB$ starts with ${\PrefixB^{K'-1} =}$
-${(P_1, \dots, P_{K'-1}) \in \StartContains(\Prefix^{K-1})}$
+${(P_1, \dots, P_{K'-1}) \in}$ ${\StartContains(\Prefix^{K-1})}$
 and ends with antecedent~${P_{K'} = p_{K}}$.
 %
 It follows that prefix~$\PrefixB$ rejects~$P_{K'}$
 for the same reason that~$\Prefix$ rejects~$p_{K}$,
-and furthermore, $\RLB$ cannot be optimal,
-\ie ${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
+and furthermore, $\RLB$~cannot be optimal, \ie
+${\RLB \notin \argmin_{\RL^\dagger} \Obj(\RL^\dagger, \x, \y)}$.
 \end{theorem}
 
 \begin{proof}
-\dots
+Combine Propositions~\ref{prop:min-capture},
+\ref{prop:min-capture-correct}, and~\ref{prop:ub-support}.
 \end{proof}
 
 \begin{proposition}[Propagation of insufficient antecedent support]
+\label{prop:min-capture}
 Define~$\StartContains(\Prefix)$ as in~\eqref{eq:start-contains},
 and let ${\Prefix = (p_1, \dots, p_{K-1}, p_{K})}$ be a prefix,
 such that its last antecedent~$p_{K}$ has insufficient support,
@@ -1087,7 +1093,7 @@ ${(P_1, \dots, P_{K'-1}) \in \StartContains(\Prefix^{K-1})}$
 and ends with~${P_{K'} = p_{K}}$.
 %
 It follows that~$P_{K'}$ has insufficient support in
-prefix~$\PrefixB$, and furthermore, $\RLB$ cannot be optimal,
+prefix~$\PrefixB$, and furthermore, $\RLB$~cannot be optimal,
 \ie ${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
 \end{proposition}
 
@@ -1119,26 +1125,28 @@ on the set of antecedents in~$\PrefixB^{K'-1}$:
 &= \frac{1}{N} \sum_{n=1}^N \left( \bigwedge_{k=1}^{K-1} \neg\, \Cap(x_n, p_k) \right)
   \wedge \Cap(x_n, p_{K}) \nn \\
 &= \Supp(p_K, \x \given \Prefix) \le \Reg.
+\label{ineq:supp}
 \end{align}
-where the first inequality reflects the condition that
+The first inequality reflects the condition that
 ${\PrefixB^{K'-1} \in \StartContains(\Prefix^{K-1})}$,
 which implies that the set of antecedents in~$\PrefixB^{K'-1}$
-contains the set of antecedents in~$\Prefix^{K-1}$, and the equality
-that immediately follows reflects the fact that~${P_{K'} = p_K}$.
+contains the set of antecedents in~$\Prefix^{K-1}$,
+and the next equality reflects the fact that~${P_{K'} = p_K}$.
 %
 Thus,~$P_K'$ has insufficient support in prefix~$\PrefixB$,
-therefore by Theorem~\ref{thm:min-capture}, $\RLB$ cannot be optimal,
+therefore by Theorem~\ref{thm:min-capture}, $\RLB$~cannot be optimal,
 \ie ${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
 \end{proof}
 
 \begin{proposition}[Propagation of insufficient accurate antecedent support]
+\label{prop:min-capture-correct}
 Define~$\StartContains(\Prefix)$ as in~\eqref{eq:start-contains},
-and let ${\RL = (\Prefix, \Labels, \Default, K)}$ be a rule list with
-prefix ${\Prefix = (p_1, \dots, p_{K-1}, p_{K})}$,
+and let ${\RL = (\Prefix, \Labels, \Default, K)}$ be a rule list
+with prefix ${\Prefix = (p_1, \dots, p_{K-1}, p_{K})}$
 and labels ${\Labels = (q_1, \dots, q_{K-1}, q_{K})}$, such that
 the last antecedent~$p_{K}$ has insufficient accurate support, \ie
 \begin{align}
-\frac{1}{N} \sum_{n=1}^N \one [ \Cap(x_n, p_K \given \Prefix) \wedge (q_K = y_n) ]
+\frac{1}{N} \sum_{n=1}^N \Cap(x_n, p_K \given \Prefix) \wedge \one [ q_K = y_n ]
 \le \Reg.
 \end{align}
 where~$\Reg$ is the regularization parameter.
@@ -1147,16 +1155,50 @@ Let ${\Prefix^{K-1} = (p_1, \dots, p_{K-1})}$,
 and let ${\RLB = (\PrefixB, \LabelsB, \DefaultB, K')}$
 be any rule list with prefix
 ${\PrefixB = (P_1, \dots, P_{K'-1}, P_{K'})}$
+and labels ${\LabelsB = (Q_1, \dots, Q_{K'-1}, Q_{K'})}$
 such that~$\PrefixB$ starts with ${\PrefixB^{K'-1} =}$
-${(P_1, \dots, P_{K'-1}) \in \StartContains(\Prefix^{K-1})}$
+${(P_1, \dots, P_{K'-1})}$ ${\in \StartContains(\Prefix^{K-1})}$
 and ends with~${P_{K'} = p_{K}}$.
 %
-It follows that~$P_{K'}$ has insufficient support in
-prefix~$\PrefixB$, and furthermore, $\RLB$ cannot be optimal,
-\ie ${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
+It follows that~$P_{K'}$ has insufficient accurate support in
+prefix~$\PrefixB$, and furthermore, $\RLB$~cannot be optimal, \ie
+${\RLB \notin}$ ${\argmin_{\RL^\dagger} \Obj(\RL^\dagger, \x, \y)}$.
 \end{proposition}
 
 \begin{proof}
+The accurate support of~$P_{K'}$ in~$\PrefixB$ is insufficient:
+\begin{align}
+\frac{1}{N} \sum_{n=1}^N \Cap(x_n, P_{K'} \given \PrefixB) \wedge \one [ Q_{K'} = y_n ]
+&= \frac{1}{N} \sum_{n=1}^N \left( \bigwedge_{k=1}^{K'-1} \neg\, \Cap(x_n, P_k) \right)
+   \wedge \Cap(x_n, P_{K'}) \wedge \one [ Q_{K'} = y_n ] \nn \\
+&\le \frac{1}{N} \sum_{n=1}^N \left( \bigwedge_{k=1}^{K-1} \neg\, \Cap(x_n, p_k) \right)
+   \wedge \Cap(x_n, P_{K'}) \wedge \one [ Q_{K'} = y_n ] \nn \\
+&= \frac{1}{N} \sum_{n=1}^N \left( \bigwedge_{k=1}^{K-1} \neg\, \Cap(x_n, p_k) \right)
+   \wedge \Cap(x_n, p_K) \wedge \one [ Q_{K'} = y_n ] \nn \\
+&= \frac{1}{N} \sum_{n=1}^N \Cap(x_n, p_K \given \Prefix) \wedge \one [ Q_{K'} = y_n ] \nn \\
+&\le \frac{1}{N} \sum_{n=1}^N \Cap(x_n, p_K \given \Prefix) \wedge \one [ q_{K} = y_n ]
+\le \Reg.
+\end{align}
+The first inequality reflects the condition that
+${\PrefixB^{K'-1} \in \StartContains(\Prefix^{K-1})}$,
+the next equality reflects the fact that~${P_{K'} = p_K}$.
+%
+For the next equality, notice that~$Q_{K'}$ is the majority class
+label of data captured by~$P_{K'}$ in~$\PrefixB$, and~$q_K$ is
+the majority class label of data captured by~$P_K$ in~$\Prefix$,
+and recall from~\eqref{ineq:supp} that
+${\Supp(P_{K'}, \x \given \PrefixB) \le \Supp(p_{K}, \x \given \Prefix)}$.
+%
+By Theorem~\ref{thm:min-capture-correct}, $\RLB$~cannot be optimal,
+\ie ${\RLB \notin \argmin_{\RL^\dagger} \Obj(\RL^\dagger, \x, \y)}$.
+\end{proof}
+
+\begin{proposition}[Propagation of excessive antecedent support]
+\label{prop:ub-support}
+\end{proposition}
+
+\begin{proof}
+\dots
 \end{proof}
 
 \begin{comment}
